# low-level-programming

./: .gitignore
sem1/: hello
sem2/: lib.inc  localvars  localvars.asm  print_string  string_length
sem3/: README.md  task1.asm
sem3/task1/: build.sh  declare_str.asm
sem3/task2/: build.sh  lib.asm  main.asm
sem3/task3/: explanation.md  makefile
sem3/task4/: AreaCheckServlet.java  makefile
sem4/: Запуск.docx
sem4/task1/: hello_mmap.asm
sem4/task2/: build.sh  hello_mmap.asm
sem4/task3/: hello.c
sem4/task4/: hello.c  string.asm
sem4/task_1/: hello_mmap.asm
sem4/task_2/: hello_mmap.asm
sem4/task_3/: hello.c  makefile
sem4/task_4/: hello.c  makefile  string.asm
sem5/questions/: alignas  alignas.c  alignas.sh  define.c  generic  generic.c  glue_str.c  print_var.c  syntax.c  syntax.sh
sem5/task1/: prog  prog.c
sem5/task2/: generalized_list  generalized_list.c
sem5/task3/: generalized_list_generic  generalized_list_generic.c
sem5/task4/: AST  AST.c
sem6/: CMakeLists.txt  README.md
sem6/task1/: CMakeLists.txt  build.sh  heap-0.c  task1.sln  task1.vcxproj  task1.vcxproj.filters
sem6/task2/: CMakeLists.txt  build.sh  heap-1.c  (+3 more)
sem7/: CMakeLists.txt
sem7/task1/: CMakeLists.txt  tail-recursion.c  task1.c
sem7/task2/: hack.sh
sem7/task3/: CMakeLists.txt  hack.sh
sem7/task4/: CMakeLists.txt
sem8/: CMakeLists.txt
seminars/: hello.asm  lib.inc  localvars.asm  parse_uint  print_hex  print_hex.asm  test1
stepik/: CMakeLists.txt
stepik/2-2/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  utils.c  utils.h
(+21 files in other folders)
